<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_alert_dialog_new_tag">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/do_you_want_add_new_tag"
        android:textSize="24sp"
        android:fontFamily="@font/proxima_nova_semibold"
        android:textColor="@color/dark_blue" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextNoteDescriptionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/tag_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNewTag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewEmptyTagName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:textSize="14sp"
        android:textColor="@android:color/holo_red_light"
        android:text="@string/empty_tag_name"
        android:fontFamily="@font/proxima_nova_regular"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonAddNewTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="12dp"
            android:background="@drawable/bg_add_tag_button"
            android:textColor="@color/global_background"
            android:fontFamily="@font/proxima_nova_bold"
            android:textSize="16sp"
            android:text="@string/add_tag" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonDenyNewTag"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/bg_refuse_tag_button"
            android:elevation="1dp"
            android:textColor="@color/dark_blue"
            android:fontFamily="@font/proxima_nova_bold"
            android:textSize="16sp"
            android:text="@string/no_thanks"/>

    </LinearLayout>

</LinearLayout>