<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/global_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.newnote.NewNoteFragment">

    <LinearLayout
        android:id="@+id/toolbarNewNote"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/global_background"
        android:gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:fontFamily="@font/proxima_nova_bold"
            android:text="@string/already_recording"
            android:textSize="20sp"
            android:textColor="@color/dark_blue"/>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextNoteTitleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbarNewNote"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxStrokeColor="@color/dark_blue"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNoteTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextNoteDescriptionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextNoteTitleLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxStrokeColor="@color/dark_blue"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNoteDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/layoutTags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/editTextNoteDescriptionLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonAddTag"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="12dp"
            android:elevation="1dp"
            android:text="@string/add"
            android:textAlignment="center"
            android:fontFamily="@font/proxima_nova_bold"
            android:textSize="20sp"
            android:textColor="@color/dark_blue"
            android:background="@drawable/add_tag_button"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            tools:listitem="@layout/tag_item"/>

    </LinearLayout>

    <Button
        android:id="@+id/buttonSaveNote"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/dark_blue"
        app:layout_constraintTop_toBottomOf="@+id/layoutTags"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/save"
        android:fontFamily="@font/proxima_nova_bold"
        android:textColor="@color/global_background"
        android:textSize="21sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>