<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.notesettings.NotesSettingsFragment"
    android:background="@color/global_background">

    <LinearLayout
        android:id="@+id/toolbarNotesSettings"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:fontFamily="@font/proxima_nova_bold"
            android:text="@string/settings"
            android:textSize="20sp"
            android:textColor="@color/dark_blue"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewAds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbarNotesSettings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:cardBackgroundColor="@color/elements_background"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="12dp"
                android:text="@string/off_ads"
                android:fontFamily="@font/proxima_nova_semibold"
                android:textColor="@color/dark_blue"
                android:textSize="16sp"
                android:gravity="center_vertical"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchAds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="12dp"
                android:elevation="1dp"
                android:gravity="center_vertical"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewDarkTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/cardViewAds"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:cardBackgroundColor="@color/elements_background"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="12dp"
                android:text="@string/enable_dark_mode"
                android:fontFamily="@font/proxima_nova_semibold"
                android:textColor="@color/dark_blue"
                android:textSize="16sp"
                android:gravity="center_vertical"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchDarkTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="12dp"
                android:gravity="center_vertical"
                tools:ignore="TouchTargetSizeCheck"
                android:elevation="1dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewPrivacyAndPolicy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/cardViewDarkTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:cardBackgroundColor="@color/elements_background"
        app:cardElevation="2dp"
        android:clickable="true"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="12dp"
                android:text="@string/privacy_and_policy"
                android:fontFamily="@font/proxima_nova_semibold"
                android:textColor="@color/dark_blue"
                android:textSize="16sp"
                android:gravity="center_vertical"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonContactDeveloper"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginTop="12dp"
        android:background="@color/global_background"
        android:text="@string/contact_developer"
        android:textColor="@color/highlighted_text"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewPrivacyAndPolicy"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>